[package]
name = "dds-bridge"
version = "0.18.0-dev"
authors = ["Chen-Pang He (https://jdh8.org)"]
edition = "2024"
rust-version = "1.85"
description = "Rusty API for DDS, the double dummy solver for bridge"
repository = "https://github.com/jdh8/dds-bridge"
homepage = "https://github.com/jdh8/dds-bridge"
documentation = "https://docs.rs/dds-bridge"
readme = "README.md"
license = "Apache-2.0"
categories = ["game-development"]
keywords = ["bridge", "double-dummy"]

[features]
serde = ["dep:serde", "arrayvec/serde", "bitflags/serde", "semver/serde"]

[dependencies]
arrayvec = "0.7"
bitflags = "2"
dds-bridge-sys = "2"
parking_lot = "0.12"
semver = "1"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2"

[dev-dependencies]
proptest = "1"
serde_json = "1"

[profile.dev]
opt-level = 2
