[package]
name = "dds-bridge"
version = "0.19.1"
authors = ["Chen-Pang He (https://jdh8.org)"]
edition = "2024"
rust-version = "1.86"
description = "Rusty API for DDS, the double dummy solver for bridge"
repository = "https://github.com/jdh8/dds-bridge"
homepage = "https://github.com/jdh8/dds-bridge"
documentation = "https://docs.rs/dds-bridge"
readme = "README.md"
license = "Apache-2.0"
categories = ["game-development"]
keywords = ["bridge", "double-dummy"]

[features]
serde = ["dep:serde", "dep:serde_with", "arrayvec/serde", "bitflags/serde", "semver/serde"]

[dependencies]
arrayvec = "0.7"
bitflags = "2"
dds-bridge-sys = "3.1"
parking_lot = "0.12"
rayon = "1"
semver = "1"
serde = { version = "1", features = ["derive"], optional = true }
serde_with = { version = "3", default-features = false, features = ["macros"], optional = true }
thiserror = "2"

[dev-dependencies]
anyhow = "1"
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
proptest = "1"
rand = "0.10"
serde_json = "1"

[profile.dev]
opt-level = 2

[[bench]]
name = "batch_solver"
harness = false
